--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,10 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
+/* Custom Global Styles - @use rules must be first */
+@use './theme/variables.scss';
+@use './theme/bank-theme.scss';
+
 /* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
 
@@ -35,7 +39,3 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
-
-/* Custom Global Styles */
-@import './theme/variables.scss';
-@import './theme/bank-theme.scss';
