--- a/src/app/pages/admin/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/components/admin-dashboard/admin-dashboard.component.html
@@ -64,9 +64,9 @@
                     <ion-icon name="wallet"></ion-icon>
                     <span>Cuentas</span>
                 </a>
-                <a class="bank-glass-card bank-menu-item" routerLink="/admin/clients">
+                <a class="bank-glass-card bank-menu-item"  (click)="navegation('/admin/customers')">
                     <ion-icon name="people-circle"></ion-icon>
-                    <span>Clientes</span>
+                    <span>Clientesx</span>
                 </a>
                 <a class="bank-glass-card bank-menu-item" routerLink="/admin/reports">
                     <ion-icon name="bar-chart"></ion-icon>
